Add shared likes storage
